# vox

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  audio.rs  constants.rs  error.rs  main.rs  transcribe.rs  ui.rs  waveform.rs
