[package]
name = "vox"
version = "0.1.0"
edition = "2021"
description = "Beautiful voice-to-text transcription TUI"

[dependencies]
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
arboard = "3"
ratatui = "0.29"
thiserror = "2"
chrono = { version = "0.4", features = ["clock"] }
